--- a/index.html
+++ b/index.html
@@ -4,140 +4,19 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Terry Ong — Portfolio</title>
+  <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
   <meta name="description" content="The personal portfolio of Terry Ong: projects, skills, and contact." />
   <meta name="color-scheme" content="dark light" />
-  <style>
-    /* ===== CSS RESET (trimmed) ===== */
-    *, *::before, *::after { box-sizing: border-box; }
-    * { margin: 0; }
-    html, body { height: 100%; }
-    body { line-height: 1.6; -webkit-font-smoothing: antialiased; text-rendering: optimizeLegibility; }
-    img, picture, video, canvas, svg { display: block; max-width: 100%; }
-    input, button, textarea, select { font: inherit; }
-    a { color: inherit; text-decoration: none; }
-
-    /* ===== THEME ===== */
-    :root {
-      --bg: #0b0d10;
-      --bg-elev: #11151a;
-      --text: #e6edf3;
-      --muted: #92a2b3;
-      --primary: #7c9cff;
-      --primary-2: #9d7cff;
-      --card: #0f1318;
-      --border: #1c232d;
-      --shadow: 0 10px 30px rgba(0,0,0,.35);
-      --radius: 16px;
-      --maxw: 1080px;
-    }
-    html[data-theme="light"] {
-      --bg: #f8fafc;
-      --bg-elev: #ffffff;
-      --text: #0f172a;
-      --muted: #475569;
-      --primary: #3b82f6;
-      --primary-2: #8b5cf6;
-      --card: #ffffff;
-      --border: #e2e8f0;
-      --shadow: 0 10px 30px rgba(2,6,23,.06);
-    }
-
-    body { background: var(--bg); color: var(--text); font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Inter, "Noto Sans", Arial, "Apple Color Emoji","Segoe UI Emoji"; }
-
-    .container { width: min(100% - 2rem, var(--maxw)); margin-inline: auto; }
-
-    /* ===== NAV ===== */
-    .nav { position: sticky; top: 0; backdrop-filter: blur(10px); background: color-mix(in oklab, var(--bg), transparent 40%); border-bottom: 1px solid var(--border); z-index: 50; }
-    .nav-inner { display:flex; align-items:center; justify-content: space-between; gap: 1rem; padding: .9rem 0; }
-    .brand { display:flex; align-items:center; gap:.75rem; font-weight: 700; letter-spacing:.2px; }
-    .brand-logo { width: 28px; height: 28px; border-radius: 8px; background: linear-gradient(135deg, var(--primary), var(--primary-2)); box-shadow: var(--shadow); }
-    .nav a { opacity:.9 }
-    .nav a:hover { opacity:1 }
-    .nav-links { display:flex; gap: 1rem; align-items:center; }
-    .nav-links a { padding:.5rem .75rem; border-radius: 10px; }
-    .nav-links a[aria-current="page"], .nav-links a:hover { background: color-mix(in oklab, var(--primary), transparent 85%); }
-    .nav-actions { display:flex; gap:.5rem; align-items:center }
-
-    .btn { display:inline-flex; align-items:center; justify-content:center; gap:.5rem; padding:.6rem .9rem; border:1px solid var(--border); background: var(--bg-elev); color: var(--text); border-radius: 999px; box-shadow: var(--shadow); transition: transform .15s ease; }
-    .btn:hover{ transform: translateY(-1px) }
-    .btn-ghost { background: transparent; box-shadow:none }
-
-    .menu { display:none }
-    @media (max-width: 820px) {
-      .menu { display:inline-flex }
-      .nav-links { display:none }
-      .nav-links.open { display:flex; position:absolute; left:0; right:0; top:64px; padding: .75rem; background: var(--bg-elev); border-bottom: 1px solid var(--border); }
-      .nav-links.open a { flex:1; text-align:center }
-    }
-
-    /* ===== HERO ===== */
-    .hero { padding: 7rem 0 4rem; position:relative; overflow:hidden; }
-    .hero-grid { display:grid; grid-template-columns: 1.2fr .8fr; gap:2rem; align-items:center; }
-    @media (max-width: 960px) { .hero-grid{ grid-template-columns: 1fr } }
-
-    .kicker { font-size: .95rem; color: var(--muted); letter-spacing:.12em; text-transform: uppercase; }
-    .headline { font-size: clamp(2rem, 5vw, 3.4rem); line-height:1.1; font-weight: 800; margin-top: .5rem; }
-    .headline .grad { background: linear-gradient(135deg, var(--primary), var(--primary-2)); -webkit-background-clip:text; background-clip:text; color: transparent; }
-    .sub { color: var(--muted); margin-top: .9rem; max-width: 60ch; }
-    .cta-row { display:flex; gap:.75rem; align-items:center; margin-top: 1.4rem; flex-wrap:wrap }
-
-    .hero-card { border:1px solid var(--border); background: var(--card); border-radius: var(--radius); padding: 1rem; display:grid; gap:.6rem }
-    .hero-cards { display:grid; grid-template-columns: repeat(2,1fr); gap: 1rem; }
-    @media (max-width: 960px) { .hero-cards{ grid-template-columns: 1fr } }
-    .muted { color: var(--muted) }
-
-    /* ===== SECTIONS ===== */
-    section { padding: 4rem 0; }
-    .section-head { display:flex; align-items:baseline; justify-content: space-between; margin-bottom: 1.5rem; gap:1rem; }
-    .section-title { font-size: clamp(1.2rem, 3vw, 1.6rem); font-weight: 800; }
-    .section-desc { color: var(--muted); max-width: 65ch }
-
-    /* ===== CARDS / GRID ===== */
-    .grid { display:grid; gap: 1rem; }
-    .grid-3 { grid-template-columns: repeat(3, 1fr); }
-    .grid-2 { grid-template-columns: repeat(2, 1fr); }
-    @media (max-width: 1000px) { .grid-3 { grid-template-columns: repeat(2, 1fr); } }
-    @media (max-width: 680px) { .grid-3, .grid-2 { grid-template-columns: 1fr; } }
-
-    .card { border:1px solid var(--border); background: var(--card); border-radius: var(--radius); padding: 1rem; display:grid; gap:.75rem; box-shadow: var(--shadow); }
-    .card h3 { font-size: 1.05rem; }
-    .tags { display:flex; gap:.5rem; flex-wrap: wrap; }
-    .tag { font-size:.8rem; padding:.25rem .55rem; border-radius: 999px; border:1px solid var(--border); color: var(--muted); }
-
-    /* ===== ABOUT ===== */
-    .about p + p { margin-top:.6rem }
-
-    /* ===== SKILLS ===== */
-    .skills { display:flex; gap:.6rem; flex-wrap:wrap }
-    .skill { border:1px solid var(--border); background: color-mix(in oklab, var(--primary), transparent 90%); padding:.45rem .7rem; border-radius: 999px; font-size:.9rem }
-
-    /* ===== TIMELINE ===== */
-    .timeline { position:relative; }
-    .timeline::before { content:""; position:absolute; left: 11px; top:0; bottom:0; width:2px; background: var(--border) }
-    .t-item { position:relative; padding-left: 2.2rem; margin-bottom: 1.2rem; }
-    .t-item::before { content:""; position:absolute; left:6px; top:.25rem; width:12px; height:12px; border-radius:50%; background: linear-gradient(135deg, var(--primary), var(--primary-2)); box-shadow: 0 0 0 3px color-mix(in oklab, var(--primary), transparent 80%); }
-    .t-meta { font-size:.85rem; color: var(--muted); }
-
-    /* ===== FOOTER ===== */
-    footer { padding: 3rem 0 4rem; color: var(--muted); border-top: 1px solid var(--border) }
-
-    /* ===== UTIL ===== */
-    .sr-only{ position:absolute; width:1px; height:1px; padding:0; margin:-1px; overflow:hidden; clip:rect(0,0,0,0); white-space:nowrap; border:0 }
-    .spacer { height: .75rem }
-    .link { color: var(--primary); }
-    .link:hover { text-decoration: underline }
-
-    @media (prefers-reduced-motion: reduce) {
-      .btn:hover { transform:none }
-    }
-  </style>
+  <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
   <!-- ===== NAV ===== -->
   <nav class="nav" aria-label="Primary">
     <div class="container nav-inner">
       <a class="brand" href="#home">
-        <span class="brand-logo" aria-hidden="true"></span>
+        <span aria-hidden="true"><img sizes="32x32" src="images/favicon-32x32.png"></img></span>
         <span> Terry Ong </span>
       </a>
       <button class="btn btn-ghost menu" id="menuBtn" aria-expanded="false" aria-controls="navLinks" aria-label="Toggle navigation">☰</button>
@@ -308,10 +187,10 @@
         <div class="spacer"></div>
         <div style="display:flex; gap:.6rem; flex-wrap:wrap">
           <a class="btn btn-ghost" href="#" aria-label="Open GitHub profile">
-            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M12 2a10 10 0 0 0-3.16 19.49c.5.09.68-.22.68-.49v-1.7c-2.78.6-3.37-1.17-3.37-1.17-.46-1.17-1.1-1.48-1.1-1.48-.9-.61.07-.6.07-.6 1 .07 1.53 1.04 1.53 1.04.9 1.53 2.35 1.09 2.92.83.09-.66.35-1.1.64-1.35-2.22-.26-4.56-1.11-4.56-4.94 0-1.09.39-1.98 1.03-2.68-.1-.26-.45-1.3.1-2.7 0 0 .84-.27 2.75 1.02A9.56 9.56 0 0 1 12 7.07c.85 0 1.7.11 2.5.32 1.9-1.29 2.74-1.02 2.74-1.02.56 1.4.21 2.44.1 2.7.64.7 1.03 1.59 1.03 2.68 0 3.84-2.35 4.67-4.58 4.92.36.31.68.92.68 1.86v2.76c0 .27.18.58.69.48A10 10 0 0 0 12 2z"/></svg>
+            <svg xmlns="https://github.com/terryong31/" width="18" height="18" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M12 2a10 10 0 0 0-3.16 19.49c.5.09.68-.22.68-.49v-1.7c-2.78.6-3.37-1.17-3.37-1.17-.46-1.17-1.1-1.48-1.1-1.48-.9-.61.07-.6.07-.6 1 .07 1.53 1.04 1.53 1.04.9 1.53 2.35 1.09 2.92.83.09-.66.35-1.1.64-1.35-2.22-.26-4.56-1.11-4.56-4.94 0-1.09.39-1.98 1.03-2.68-.1-.26-.45-1.3.1-2.7 0 0 .84-.27 2.75 1.02A9.56 9.56 0 0 1 12 7.07c.85 0 1.7.11 2.5.32 1.9-1.29 2.74-1.02 2.74-1.02.56 1.4.21 2.44.1 2.7.64.7 1.03 1.59 1.03 2.68 0 3.84-2.35 4.67-4.58 4.92.36.31.68.92.68 1.86v2.76c0 .27.18.58.69.48A10 10 0 0 0 12 2z"/></svg>
             GitHub</a>
           <a class="btn btn-ghost" href="#" aria-label="Open LinkedIn profile">
-            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M4.98 3.5C4.98 4.88 3.86 6 2.5 6S0 4.88 0 3.5 1.12 1 2.5 1 4.98 2.12 4.98 3.5zM.5 8h4V24h-4zM8.5 8h3.8v2.2h.1C13 8.9 14.7 8 16.7 8c4 0 4.7 2.6 4.7 6v10h-4v-8.9c0-2.1 0-4.8-2.9-4.8s-3.3 2.3-3.3 4.6V24h-4z"/></svg>
+            <svg xmlns="https://www.linkedin.com/in/ongkokdonq/" width="18" height="18" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M4.98 3.5C4.98 4.88 3.86 6 2.5 6S0 4.88 0 3.5 1.12 1 2.5 1 4.98 2.12 4.98 3.5zM.5 8h4V24h-4zM8.5 8h3.8v2.2h.1C13 8.9 14.7 8 16.7 8c4 0 4.7 2.6 4.7 6v10h-4v-8.9c0-2.1 0-4.8-2.9-4.8s-3.3 2.3-3.3 4.6V24h-4z"/></svg>
             LinkedIn</a>
         </div>
       </div>
@@ -324,58 +203,6 @@
     </div>
   </footer>
 
-  <script>
-    // ===== THEME TOGGLE =====
-    (function themeInit(){
-      const saved = localStorage.getItem('theme');
-      if(saved === 'light' || saved === 'dark') document.documentElement.setAttribute('data-theme', saved);
-      const isLight = document.documentElement.getAttribute('data-theme') === 'light';
-      document.getElementById('iconSun').style.display = isLight ? 'none' : '';
-      document.getElementById('iconMoon').style.display = isLight ? '' : 'none';
-    })();
-
-    document.getElementById('themeBtn').addEventListener('click', () => {
-      const html = document.documentElement;
-      const next = html.getAttribute('data-theme') === 'light' ? 'dark' : 'light';
-      html.setAttribute('data-theme', next);
-      localStorage.setItem('theme', next);
-      const isLight = next === 'light';
-      document.getElementById('iconSun').style.display = isLight ? 'none' : '';
-      document.getElementById('iconMoon').style.display = isLight ? '' : 'none';
-    });
-
-    // ===== MOBILE MENU =====
-    const menuBtn = document.getElementById('menuBtn');
-    const navLinks = document.getElementById('navLinks');
-    menuBtn.addEventListener('click', () => {
-      const open = navLinks.classList.toggle('open');
-      menuBtn.setAttribute('aria-expanded', String(open));
-    });
-    navLinks.querySelectorAll('a').forEach(a => a.addEventListener('click', ()=>{
-      navLinks.classList.remove('open');
-      menuBtn.setAttribute('aria-expanded','false');
-    }));
-
-    // ===== ACTIVE LINK ON SCROLL =====
-    const sections = [...document.querySelectorAll('section, header.hero')];
-    const links = [...document.querySelectorAll('.nav-links a')];
-    const map = new Map(sections.map(s => [s.id || 'home', s]));
-
-    const io = new IntersectionObserver((entries) => {
-      entries.forEach(entry => {
-        if(entry.isIntersecting) {
-          const id = entry.target.id || 'home';
-          links.forEach(l => l.removeAttribute('aria-current'));
-          const link = links.find(l => l.getAttribute('href') === `#${id}`);
-          if(link) link.setAttribute('aria-current','page');
-        }
-      });
-    }, { rootMargin: '-50% 0px -40% 0px', threshold: 0.01 });
-
-    sections.forEach(s => io.observe(s));
-
-    // Year
-    document.getElementById('year').textContent = new Date().getFullYear();
-  </script>
+  <script src="script.js"></script>
 </body>
 </html>
