--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
     <div class="container hero-grid">
       <div>
         <p class="kicker">Hello, I'm</p>
-        <h1 class="headline"> <span class="grad">Terry Ong</span> — Software Developer</h1>
-        <p class="sub">I build fast, reliable, and human‑friendly applications. Here you'll find a snapshot of what I do: the problems I solve, the tools I use, and the projects I'm proud of.</p>
+        <h1 class="headline"> <span class="grad">Terry Ong</span> — IT Ops Generalist</h1>
+        <p class="sub">Welcome to my portfolio! Explore my journey and expertise as an IT graduate.</p>
         <div class="cta-row">
           <a class="btn" href="#projects">View Projects</a>
           <a class="btn btn-ghost" href="#contact">Contact Me</a>
@@ -52,7 +52,7 @@
       <div class="hero-cards">
         <div class="hero-card">
           <span class="muted">Current Focus</span>
-          <strong>Clean UI, robust APIs, cloud‑ready deployments.</strong>
+          <strong>Cloud, Sysadmin, Software Development</strong>
         </div>
         <div class="hero-card">
           <span class="muted">Open for</span>
@@ -67,11 +67,11 @@
     <div class="container">
       <div class="section-head">
         <h2 class="section-title">About</h2>
-        <p class="section-desc">A brief introduction to who I am and how I work.</p>
+        <p class="section-desc">A brief introduction to who I am.</p>
       </div>
       <div class="card">
-        <p>I'm <strong>Terry Ong</strong>, a developer who enjoys turning ideas into practical software. I value readable code, accessible interfaces, and efficient systems. I work across the stack—HTML/CSS/JS on the front, and scripting/automation for tooling.</p>
-        <p>Outside of coding, I love learning new tech, refining workflows, and collaborating with teams to ship useful things.</p>
+        <p>I’m a final-year Computer Science student graduating in October 2025 with six months of IT infrastructure experience. I build reliable systems and practical web apps, combining Azure, Power Platform, and generative AI. I’m AI-900, AZ-900, and PL-900 certified; AAIMS25 Buildathon Youth Winner and PayNet VDEP Ideathon 1st Runner-Up. I value clear communication, teamwork, and straight-to-the-point problem solving.</p>
+        <p>Outside of code, I’m a hackathon enthusiast, performing musician, and gamer.</p>
       </div>
     </div>
   </section>
@@ -88,12 +88,13 @@
           <span class="skill">HTML5</span>
           <span class="skill">CSS3</span>
           <span class="skill">JavaScript</span>
-          <span class="skill">Responsive Design</span>
+          <span class="skill">Python</span>
           <span class="skill">Git & GitHub</span>
           <span class="skill">REST APIs</span>
           <span class="skill">CLI & Scripting</span>
-          <span class="skill">Accessibility (a11y)</span>
-          <span class="skill">Performance</span>
+          <span class="skill">Powershell</span>
+          <span class="skill">Networking</span>
+          <span class="skill">Cloud Infastructure</span>
         </div>
       </div>
     </div>
@@ -104,12 +105,12 @@
     <div class="container">
       <div class="section-head">
         <h2 class="section-title">Projects</h2>
-        <p class="section-desc">A few highlights. Links are placeholders—swap them with your live demos and repos.</p>
+        <p class="section-desc">These are a few projects that I have done throughout my IT career.</p>
       </div>
       <div class="grid grid-3">
         <article class="card">
           <h3>CompMed AR</h3>
-          <p class="muted">An AR‑assisted learning app for visualizing human anatomy models in 3D, built for medical students.</p>
+          <p class="muted">An AR‑assisted learning app for visualizing <strong>REAL</strong> human anatomy models in 3D, built for medical students.</p>
           <div class="tags">
             <span class="tag">AR</span>
             <span class="tag">3D</span>
@@ -117,8 +118,7 @@
           </div>
           <div class="spacer"></div>
           <div style="display:flex; gap:.6rem; flex-wrap:wrap">
-            <a class="btn btn-ghost" href="#" aria-label="Open live demo">Live</a>
-            <a class="btn btn-ghost" href="#" aria-label="Open source code">Code</a>
+            <a class="btn btn-ghost" href="https://github.com/terryong31/compmed-ar" aria-label="Open source code">Code</a>
           </div>
         </article>
 
@@ -186,11 +186,11 @@
         <p>Email me at <a class="link" href="mailto:terry@example.com">terry@example.com</a> or find me here:</p>
         <div class="spacer"></div>
         <div style="display:flex; gap:.6rem; flex-wrap:wrap">
-          <a class="btn btn-ghost" href="#" aria-label="Open GitHub profile">
-            <svg xmlns="https://github.com/terryong31/" width="18" height="18" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M12 2a10 10 0 0 0-3.16 19.49c.5.09.68-.22.68-.49v-1.7c-2.78.6-3.37-1.17-3.37-1.17-.46-1.17-1.1-1.48-1.1-1.48-.9-.61.07-.6.07-.6 1 .07 1.53 1.04 1.53 1.04.9 1.53 2.35 1.09 2.92.83.09-.66.35-1.1.64-1.35-2.22-.26-4.56-1.11-4.56-4.94 0-1.09.39-1.98 1.03-2.68-.1-.26-.45-1.3.1-2.7 0 0 .84-.27 2.75 1.02A9.56 9.56 0 0 1 12 7.07c.85 0 1.7.11 2.5.32 1.9-1.29 2.74-1.02 2.74-1.02.56 1.4.21 2.44.1 2.7.64.7 1.03 1.59 1.03 2.68 0 3.84-2.35 4.67-4.58 4.92.36.31.68.92.68 1.86v2.76c0 .27.18.58.69.48A10 10 0 0 0 12 2z"/></svg>
+          <a class="btn btn-ghost" href="https://github.com/terryong31" aria-label="Open GitHub profile">
+            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M12 2a10 10 0 0 0-3.16 19.49c.5.09.68-.22.68-.49v-1.7c-2.78.6-3.37-1.17-3.37-1.17-.46-1.17-1.1-1.48-1.1-1.48-.9-.61.07-.6.07-.6 1 .07 1.53 1.04 1.53 1.04.9 1.53 2.35 1.09 2.92.83.09-.66.35-1.1.64-1.35-2.22-.26-4.56-1.11-4.56-4.94 0-1.09.39-1.98 1.03-2.68-.1-.26-.45-1.3.1-2.7 0 0 .84-.27 2.75 1.02A9.56 9.56 0 0 1 12 7.07c.85 0 1.7.11 2.5.32 1.9-1.29 2.74-1.02 2.74-1.02.56 1.4.21 2.44.1 2.7.64.7 1.03 1.59 1.03 2.68 0 3.84-2.35 4.67-4.58 4.92.36.31.68.92.68 1.86v2.76c0 .27.18.58.69.48A10 10 0 0 0 12 2z"/></svg>
             GitHub</a>
-          <a class="btn btn-ghost" href="#" aria-label="Open LinkedIn profile">
-            <svg xmlns="https://www.linkedin.com/in/ongkokdonq/" width="18" height="18" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M4.98 3.5C4.98 4.88 3.86 6 2.5 6S0 4.88 0 3.5 1.12 1 2.5 1 4.98 2.12 4.98 3.5zM.5 8h4V24h-4zM8.5 8h3.8v2.2h.1C13 8.9 14.7 8 16.7 8c4 0 4.7 2.6 4.7 6v10h-4v-8.9c0-2.1 0-4.8-2.9-4.8s-3.3 2.3-3.3 4.6V24h-4z"/></svg>
+          <a class="btn btn-ghost" href="https://www.linkedin.com/in/ongkokdonq/" aria-label="Open LinkedIn profile">
+            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M4.98 3.5C4.98 4.88 3.86 6 2.5 6S0 4.88 0 3.5 1.12 1 2.5 1 4.98 2.12 4.98 3.5zM.5 8h4V24h-4zM8.5 8h3.8v2.2h.1C13 8.9 14.7 8 16.7 8c4 0 4.7 2.6 4.7 6v10h-4v-8.9c0-2.1 0-4.8-2.9-4.8s-3.3 2.3-3.3 4.6V24h-4z"/></svg>
             LinkedIn</a>
         </div>
       </div>
