--- a/index.html
+++ b/index.html
@@ -164,11 +164,18 @@
       </div>
       <div class="card timeline">
         <div class="t-item">
-          <h3>Software / IT Intern <span class="muted">— 2025</span></h3>
-          <div class="t-meta">Improved internal tools, automated workflows, supported deployments.</div>
+          <h3>IT Infrastructure Intern <span class="muted">— 2025</span></h3>
+          <div class="t-meta">
+            <ul>
+              <li>Cut asset audit time by 30% using powershell.</li>
+              <li>Deployed a dedicated asset monitoring system for ease of access.</li>
+              <li>Co-implemented osTicket system within the corporate environment.</li>
+              <li>Hands on experience with physical servers, VPNs and A/V tools.</li>
+            </ul>
+          </div>
         </div>
         <div class="t-item">
-          <h3>Student Projects <span class="muted">— 2024–2025</span></h3>
+          <h3>Student <span class="muted">— 2022–2025</span></h3>
           <div class="t-meta">Built prototypes, refined UI/UX, collaborated in small teams.</div>
         </div>
       </div>
@@ -183,7 +190,7 @@
         <p class="section-desc">Have an opportunity or idea? Let's talk.</p>
       </div>
       <div class="card">
-        <p>Email me at <a class="link" href="mailto:terry@example.com">terry@example.com</a> or find me here:</p>
+        <p>Email me at <a class="link" href="mailto:terry@example.com">terryong30@gmail.com</a> or find me here:</p>
         <div class="spacer"></div>
         <div style="display:flex; gap:.6rem; flex-wrap:wrap">
           <a class="btn btn-ghost" href="https://github.com/terryong31" aria-label="Open GitHub profile">
