--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
       </div>
       <div class="card timeline">
         <div class="t-item">
-          <h3>IT Infrastructure Intern <span class="muted">— 2025</span></h3>
+          <h3 style="margin-bottom:1%;">IT Infrastructure Intern <span class="muted">— Texchem Corporation Sdn Bhd </span><span class="muted">— 2025</span></h3>
           <div class="t-meta">
             <ul>
               <li>Cut asset audit time by 30% using powershell.</li>
@@ -173,10 +173,6 @@
               <li>Hands on experience with physical servers, VPNs and A/V tools.</li>
             </ul>
           </div>
-        </div>
-        <div class="t-item">
-          <h3>Student <span class="muted">— 2022–2025</span></h3>
-          <div class="t-meta">Built prototypes, refined UI/UX, collaborated in small teams.</div>
         </div>
       </div>
     </div>
@@ -193,10 +189,10 @@
         <p>Email me at <a class="link" href="mailto:terry@example.com">terryong30@gmail.com</a> or find me here:</p>
         <div class="spacer"></div>
         <div style="display:flex; gap:.6rem; flex-wrap:wrap">
-          <a class="btn btn-ghost" href="https://github.com/terryong31" aria-label="Open GitHub profile">
+          <a class="btn btn-ghost" href="https://github.com/terryong31" aria-label="Open GitHub profile" target="_blank" rel="noopener noreferrer">
             <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M12 2a10 10 0 0 0-3.16 19.49c.5.09.68-.22.68-.49v-1.7c-2.78.6-3.37-1.17-3.37-1.17-.46-1.17-1.1-1.48-1.1-1.48-.9-.61.07-.6.07-.6 1 .07 1.53 1.04 1.53 1.04.9 1.53 2.35 1.09 2.92.83.09-.66.35-1.1.64-1.35-2.22-.26-4.56-1.11-4.56-4.94 0-1.09.39-1.98 1.03-2.68-.1-.26-.45-1.3.1-2.7 0 0 .84-.27 2.75 1.02A9.56 9.56 0 0 1 12 7.07c.85 0 1.7.11 2.5.32 1.9-1.29 2.74-1.02 2.74-1.02.56 1.4.21 2.44.1 2.7.64.7 1.03 1.59 1.03 2.68 0 3.84-2.35 4.67-4.58 4.92.36.31.68.92.68 1.86v2.76c0 .27.18.58.69.48A10 10 0 0 0 12 2z"/></svg>
             GitHub</a>
-          <a class="btn btn-ghost" href="https://www.linkedin.com/in/ongkokdonq/" aria-label="Open LinkedIn profile">
+          <a class="btn btn-ghost" href="https://www.linkedin.com/in/ongkokdonq/" aria-label="Open LinkedIn profile" target="_blank" rel="noopener noreferrer">
             <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M4.98 3.5C4.98 4.88 3.86 6 2.5 6S0 4.88 0 3.5 1.12 1 2.5 1 4.98 2.12 4.98 3.5zM.5 8h4V24h-4zM8.5 8h3.8v2.2h.1C13 8.9 14.7 8 16.7 8c4 0 4.7 2.6 4.7 6v10h-4v-8.9c0-2.1 0-4.8-2.9-4.8s-3.3 2.3-3.3 4.6V24h-4z"/></svg>
             LinkedIn</a>
         </div>
