--- a/index.html
+++ b/index.html
@@ -164,15 +164,16 @@
       </div>
       <div class="card timeline">
         <div class="t-item">
-          <h3 style="margin-bottom:1%;">IT Infrastructure Intern <span class="muted">— Texchem Corporation Sdn Bhd </span><span class="muted">— 2025</span></h3>
-          <div class="t-meta">
-            <ul>
-              <li>Cut asset audit time by 30% using powershell.</li>
-              <li>Deployed a dedicated asset monitoring system for ease of access.</li>
-              <li>Co-implemented osTicket system within the corporate environment.</li>
-              <li>Hands on experience with physical servers, VPNs and A/V tools.</li>
-            </ul>
+          <h3 style="margin-bottom:1%;">IT Infrastructure Intern</h3> 
+          <div style="gap:1rem; display:flex; align-items:baseline; justify-content:space-between;">
+            <p><span class="muted">Texchem Corporation Sdn Bhd</span><p><span class="muted" style="text-align:right;">Apr 2025 — Oct 2025</span></p>
           </div>
+          <ul style="margin-top:1%;">
+            <li>Cut asset audit time by 30% using powershell.</li>
+            <li>Deployed a dedicated asset monitoring system for ease of access.</li>
+            <li>Co-implemented osTicket system within the corporate environment.</li>
+            <li>Hands on experience with physical servers, VPNs and A/V tools.</li>
+          </ul>
         </div>
       </div>
     </div>
