--- a/index.html
+++ b/index.html
@@ -44,9 +44,7 @@
         <h1 class="headline"> <span class="grad">Terry Ong</span> — IT Ops Generalist</h1>
         <p class="sub">Welcome to my portfolio! Explore my journey and expertise as an IT graduate.</p>
         <div class="cta-row">
-          <a class="btn" href="#projects">View Projects</a>
-          <a class="btn btn-ghost" href="#contact">Contact Me</a>
-          <a class="btn btn-ghost" href="#about" aria-label="Skip to about">About</a>
+          <a class="btn" href="documents/Ong_Kok_Donq_Resume.pdf" download>Download Resume</a>
         </div>
       </div>
       <div class="hero-cards">
