--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <div>
         <p class="kicker">Hello, I'm</p>
         <h1 class="headline"> <span class="grad">Terry Ong</span> — ITOps Generalist</h1>
-        <p class="sub">A computer science graduate with experience in IT infrastructure and a background in web/software dev, cloud and artificial intelligence.<br><br>Outside of code, I’m a person who enjoys competition, a musician, and gamer.</p>
+        <p class="sub">A computer science graduate with experience in IT infrastructure and a background in dev, cybersecurity, cloud and AI.<br><br>This website is built using vanilla HTML, CSS and JS (with AI assistance); hosted using Github, Azure and Namecheap. Showcasing my knowledge on Gen AI, cloud, version control and DNS.<br><br>Outside of tech, I’m a person who enjoys competition, a performing musician and gamer.</p>
         <div class="cta-row">
           <a class="btn" href="documents/Ong_Kok_Donq_Resume.pdf" download>Download Resume</a>
         </div>
@@ -100,7 +100,9 @@
         <h2 class="section-title">Experience</h2>
         <p class="section-desc">Snapshot of roles and contributions.</p>
       </div>
+
       <div class="card timeline">
+
         <div class="t-item">
           <h3 style="margin-bottom:1%;">IT Infrastructure Intern</h3> 
           <div style="gap:1rem; display:flex; align-items:baseline; justify-content:space-between;">
@@ -113,6 +115,42 @@
             <li>Hands on experience with physical servers, VPNs and A/V tools.</li>
           </ul>
         </div>
+
+        <div class="t-item">
+          <h3 style="margin-bottom:1%;">Program Akar Cohort 2</h3> 
+          <div style="gap:1rem; display:flex; align-items:baseline; justify-content:space-between;">
+            <p><span class="muted">Paynet, Peoplelogy, Futuresparx</span><p><span class="muted" style="text-align:right;">Jun 2025 — Aug 2025</span></p>
+          </div>
+          <ul style="margin-top:1%;">
+            <li>Attended a 2 months Azure AI workshop.</li>
+            <li>Hands on experience with Python data libraries (numpy, pandas and matplotlib).</li>
+            <li>Participated a VDEP seminar and ideathon.</li>
+          </ul>
+        </div>
+
+        <div class="t-item">
+          <h3 style="margin-bottom:1%;">Kaspersky{CTF}</h3> 
+          <div style="gap:1rem; display:flex; align-items:baseline; justify-content:space-between;">
+            <p><span class="muted">Kaspersky</span><p><span class="muted" style="text-align:right;">Aug 2025</span></p>
+          </div>
+          <ul style="margin-top:1%;">
+            <li>Participated a Jeopardy style CTF.</li>
+            <li>Hands on experience with Ghidra, Docker and prompt injection.</li>
+            <li>Scored 22nd in the Asia & Oceania Region.</li>
+          </ul>
+        </div>
+
+        <div class="t-item">
+          <h3 style="margin-bottom:1%;">Asean AI Malaysia Summit 2025 Buildathon</h3> 
+          <div style="gap:1rem; display:flex; align-items:baseline; justify-content:space-between;">
+            <p><span class="muted">AI Tinkerers Kuala Lumpur, National AI Office (NAIO)</span><p><span class="muted" style="text-align:right;">Aug 2025</span></p>
+          </div>
+          <ul style="margin-top:1%;">
+            <li>Participated and won a national level buildathon.</li>
+            <li>Developed a Python based Fast-API backend system with computer vision and google maps.</li>
+          </ul>
+        </div>
+
       </div>
     </div>
   </section>
@@ -140,8 +178,8 @@
         </article>
 
         <article class="card">
-          <h3>Internal Helpdesk Setup</h3>
-          <p class="muted">Customized a ticketing system with directory integration and automation to streamline IT support.</p>
+          <h3>osTicket on AWS</h3>
+          <p class="muted">A live demo of an open source ticketing system hosted in AWS using my own domain.</p>
           <div class="tags">
             <span class="tag">ITSM</span>
             <span class="tag">LDAP</span>
@@ -149,7 +187,7 @@
           </div>
           <div class="spacer"></div>
           <div style="display:flex; gap:.6rem; flex-wrap:wrap">
-            <a class="btn btn-ghost" href="#">Notes</a>
+            <a class="btn btn-ghost" href="https://helpdesk.terryongkokdonq.xyz/">Live</a>
             <a class="btn btn-ghost" href="#">Code</a>
           </div>
         </article>
@@ -213,7 +251,7 @@
         <article class="card">
           <h3>DP-900</h3>
           <img src="cert_badges/ms_fundamentals.svg" height="100px"></img>
-          <p class="muted">Microsoft Certified: Data Fundamentals</p>
+          <p class="muted" style="min-height:60px; display: flex;">Microsoft Certified: Azure Data Fundamentals</p>
           <div class="tags">
             <span class="tag">SQL</span>
             <span class="tag">Data</span>
