--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
     <div class="container">
       <div class="section-head">
         <h2 class="section-title">Projects</h2>
-        <p class="section-desc">These are a few projects that I have done throughout my IT career.</p>
+        <p class="section-desc">These are a few notable projects that I have done throughout my IT career.</p>
       </div>
       <div class="grid grid-3">
         <article class="card">
@@ -193,17 +193,17 @@
         </article>
 
         <article class="card">
-          <h3>Portfolio Template</h3>
-          <p class="muted">This site: a static, accessible template with dark/light mode, responsive layout, and zero dependencies.</p>
+          <h3>CARe - The Fastest Hospital</h3>
+          <p class="muted">A proof-of-concept mobile app to find the fastest hospital.</p>
           <div class="tags">
-            <span class="tag">HTML</span>
-            <span class="tag">CSS</span>
-            <span class="tag">JS</span>
+            <span class="tag">Python</span>
+            <span class="tag">FastAPI</span>
+            <span class="tag">CV</span>
           </div>
           <div class="spacer"></div>
           <div style="display:flex; gap:.6rem; flex-wrap:wrap">
-            <a class="btn btn-ghost" href="#">Live</a>
-            <a class="btn btn-ghost" href="#">Code</a>
+            <a class="btn btn-ghost" target="_blank" href="https://bt-care.vercel.app/">Live</a>
+            <a class="btn btn-ghost" target="_blank" href="https://github.com/toorcn/asean-ai-summit-buildathon">Code</a>
           </div>
         </article>
       </div>
